--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </head>
   <body>
     <!--Navbar-->
-    <header>
+    <header class="">
       <nav class="navbar navbar-expand-lg navbar-light ">
         <img class="my-4 pl-6 navlogo" src="images/Logo.svg" />
         <div class="d-lg-none"><a class="ujweb" href="#">+ Új weboldal</a></div>
