--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
     <div class="container">
       <ul id="flex3" class="row">
         <div id="A">
-          <li class="font1">
+          <p class="font1">
             Készíts
             <span style="text-decoration: underline">saját weboldalt</span> 5 perc
             alatt!
-          </li>
-          <li class="font2">
+          </p>
+          <p class="font2">
             Understand to achieve anything requires faith and belief in yourself,
             vision, hard work, determination, and dedication.
-          </li>
+        </p>
             <a class="webcs" href="#">Weboldal csomagok</a>
         </div>
         <div id="B" class="asd">
@@ -194,11 +194,8 @@
             <li class="font5">Understand to achieve anything requires faith and belief in yourself, vision, hard work, determination, and dedication.</li>
           </div>
         </ul>
-        <ul class="">
-          <div class="">
             <img class="img4" src="images/Group 12.svg" alt="">
-          </div>
-        </ul>
+
       </div>
     </div>
     <!--SEVENTH DIV-->
@@ -349,7 +346,7 @@
                 <li class="mb-3"><a href="#" class="">Kapcsolat</a></li>
               </ul>
             </div>
-            <div id="D" class="">
+            <div id="D1" class="">
               <p class="font-weight-bold mb-4 fhir">Hírlevél feliratkozás</p>
               <p class="mb-4 fir">Iratkozz fel hírlevelünkre, hogy első kézből értesülj újdonságainkról!</p>
               <div class="p-1">
