--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <header class="">
       <nav class="navbar navbar-expand-lg navbar-light ">
         <img class="my-4 pl-6 navlogo" src="images/Logo.svg" />
-        <div class="d-lg-none"><a class="ujweb" href="#">+ Új weboldal</a></div>
+        <div class="d-lg-none"><a class="ujweb" href="/weboldaltervezo-1-csomagvalaszto.html">+ Új weboldal</a></div>
         <button class="navbar-toggler btnm" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -58,9 +58,9 @@
           <div></div>
           <div class="navbar-nav">            
               <div id="AB">
-                <a class="links csomagok" href="#">Csomagok</a>
-                <a class="links menu2" href="#">Ingyen weboldal</a>
-                <a class="links menu2" href="#">Referenciák</a>
+                <a class="links csomagok" href="csomagok.html">Csomagok</a>
+                <a class="links menu2" href="ingyen-weboldal.html">Ingyen weboldal</a>
+                <a class="links menu2" href="referenciák.html">Referenciák</a>
                 <a class="links menu2" href="#">Kapcsolat</a>
                 <div class="rect"></div>
               </div>
@@ -68,7 +68,7 @@
           <div id="AC" class="navbar-nav">
             <img class="vector" src="images/Vector.svg" />
             <a class="menu2" href="#">Belépés</a>
-          <div class="d-none d-lg-block"><a class="ujweb" href="#">+ Új weboldal</a></div>
+          <div class="d-none d-lg-block"><a class="ujweb" href="weboldaltervezo-1-csomagvalaszto.html">+ Új weboldal</a></div>
           </div> 
         </div>
       </nav>
@@ -86,7 +86,7 @@
             Understand to achieve anything requires faith and belief in yourself,
             vision, hard work, determination, and dedication.
         </p>
-            <a class="webcs" href="#">Weboldal csomagok</a>
+            <a class="webcs" href="csomagok.html">Weboldal csomagok</a>
         </div>
         <div id="B" class="asd">
           <li class="">
@@ -107,8 +107,8 @@
               Most INGYEN készíthetsz weboldalt alapítványod, egyesületed, civil
               szervezeted számára!
             </p>
-              <a href="#" class="resz">Részletek</a>
-              <a href="#" class="bele">Belevágok</a>
+              <a href="ingyen-weboldal.html" class="resz">Részletek</a>
+              <a href="weboldaltervezo-1-csomagvalaszto.html" class="bele">Belevágok</a>
           </div>
         </div>
       </div>
@@ -240,7 +240,7 @@
     </div>
     <!--NEINTH DIV-->
     <div style="display: flex;" class=" justify-content-center" >
-        <a class="webcs2" href="#">Irány a weboldaltervező</a>
+        <a class="webcs2" href="weboldaltervezo-1-csomagvalaszto.html">Irány a weboldaltervező</a>
   </div>
     <!--TENTH DIV-->
     <div class="row pt-5">
@@ -253,7 +253,7 @@
           </div>
         </ul>
         <ul class="">
-            <a href="#" class="btn2">Weboldal csomagok</a>
+            <a href="csomagok.html" class="btn2">Weboldal csomagok</a>
         </ul>
       </div>
     </div>
@@ -324,7 +324,7 @@
     
     <!--THIRTEENTH DIV-->
       <div class="row pt-5">
-          <a class="webcs4" href="#">referenciák</a>
+          <a class="webcs4" href="referenciák.html">referenciák</a>
       </div>
 
     <!--FOOTER-->
@@ -340,9 +340,9 @@
             <div id="C" class="m-auto">
               <p class="mb-4 font-weight-bold fmenu">Menü</p>
               <ul class="mb-0 fmenu1">
-                <li class="mb-3"><a href="#" class="">Csomagok</a></li>
-                <li class="mb-3"><a href="#" class="">Áraink</a></li>
-                <li class="mb-3"><a href="#" class="">Referenciák</a></li>
+                <li class="mb-3"><a href="csomagok.html" class="">Csomagok</a></li>
+                <li class="mb-3"><a href="ingyen-weboldal.html" class="">Áraink</a></li>
+                <li class="mb-3"><a href="referenciák.html" class="">Referenciák</a></li>
                 <li class="mb-3"><a href="#" class="">Kapcsolat</a></li>
               </ul>
             </div>
