--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
       <div id="megtud2">
         <ul class="group1155-1">
           <li class="">Csomagokból választhatsz</li>
-          <li class="">Valóban egyszerű szerkeszteni</li>
-          <li class="">Gyors és könnyen értelmezhető</li>
+          <li class="group1155-1text">Valóban egyszerű szerkeszteni</li>
+          <li class="group1155-1text2">Gyors és könnyen értelmezhető</li>
         </ul>
       </div>
       <div id="megtud3">
         <ul class="group1155">
           <li class="">Mobilbarát megjelenés</li>
-          <li class="">Időt és energiát spórolsz</li>
+          <li class="group1155text">Időt és energiát spórolsz</li>
           <li class="">Bárhonnan szerkesztheted</li>
         </ul>
       </div>
