--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
       rel="canonical"
       href="https://getbootstrap.com/docs/4.6/examples/starter-template/"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
     <!-- Bootstrap core CSS -->
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="assets/dist/css/main.css" rel="stylesheet" />
     <link href="assets/dist/css/navbar.css" rel="stylesheet"/>
     <link rel="stylesheet" href="assets/dist/css/max576.css">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&display=swap" rel="stylesheet">
+
     <!-- Bootstrap core CSS 
     /<style>
       .bd-placeholder-img {
@@ -48,9 +51,9 @@
   <body>
     <!--Navbar-->
     <header class="">
-      <nav class="navbar navbar-expand-lg navbar-light ">
-        <img class="my-4 pl-6 navlogo" src="images/Logo.svg" />
-        <div class="d-lg-none"><a class="ujweb" href="/weboldaltervezo-1-csomagvalaszto.html">+ Új weboldal</a></div>
+      <nav class="navbar navbar-expand-xl navbar-light ">
+        <img class="my-4 navlogo" src="images/Logo.svg" />
+        <div class="d-xl-none"><a class="ujweb" href="/weboldaltervezo-1-csomagvalaszto.html">+ Új weboldal</a></div>
         <button class="navbar-toggler btnm" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -68,7 +71,7 @@
           <div id="AC" class="navbar-nav">
             <img class="vector" src="images/Vector.svg" />
             <a class="menu2" href="#">Belépés</a>
-          <div class="d-none d-lg-block"><a class="ujweb" href="weboldaltervezo-1-csomagvalaszto.html">+ Új weboldal</a></div>
+          <div class="d-none d-xl-block"><a class="ujweb" href="weboldaltervezo-1-csomagvalaszto.html">+ Új weboldal</a></div>
           </div> 
         </div>
       </nav>
