--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
       <div class="row pt-3">
         <ul class="">
           <div>
-            <p class="rect3txt mr-xl-5 justify-content-center" style="display: flex;">Csomagokat dolgozunk ki!</p>
+            <p class="rect3txt mr-lg-5 justify-content-center" style="display: flex;">Csomagokat dolgozunk ki!</p>
             <p class="rect3txt2 justify-content-center" style="display: flex;">Hogy könnyebb legyen döntened!</p>
           </div>
         </ul>
