--- a/index.html
+++ b/index.html
@@ -21,38 +21,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
-    <!-- Bootstrap core CSS -->
+
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="assets/dist/css/main.css" rel="stylesheet" />
     <link href="assets/dist/css/navbar.css" rel="stylesheet"/>
     <link rel="stylesheet" href="assets/dist/css/max576.css">
-
-    <!-- Bootstrap core CSS 
-    /<style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>-->
     <style>
 
     </style>
   </head>
-  <body>
+  <body style="background-color: #FDFDFD;">
     <!--Navbar-->
     <header class="">
       <nav class="navbar navbar-expand-xl navbar-light ">
-        <img class="my-4 navlogo" src="images/Logo.svg" />
+        <a href="index.html"><img class="my-4 navlogo" src="images/Logo.svg" /></a>
         <div class="d-xl-none"><a class="ujweb" href="/weboldaltervezo-1-csomagvalaszto.html">+ Új weboldal</a></div>
         <button class="navbar-toggler btnm" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -78,7 +60,7 @@
     </header>
     <!--First div-->
     <div class="container">
-      <ul id="flex3" class="row">
+      <ul id="flex1" class="row">
         <div id="A">
           <p class="font1">
             Készíts
@@ -117,7 +99,7 @@
       </div>
     </div>
     <!--THIRD DIV-->
-    <div id="flex4" class="container pt-4">
+    <div id="flex2" class="container pt-4">
       <div id="megtud">
         <p class="txt">Te is könnyedén meg tudod csinálni.</p>
       </div>
@@ -142,7 +124,7 @@
       <p class="mtitletxt2">Mindent tud, amire szükséged van</p>
     </div>
     <!--FIFTH DIV-->
-    <div id="flex2" class="row divco justify-content-center">
+    <div id="flex3" class="row divco justify-content-center">
       <div class="row container">
         <div id="B1" >
           <div  class="box pt-4">
@@ -181,7 +163,6 @@
           </div>
         </div>
       </div>
-      
     </div>
     <!--SIXTH DIV-->
     <div class="container justify-content-center">
@@ -198,7 +179,6 @@
           </div>
         </ul>
             <img class="img4" src="images/Group 12.svg" alt="">
-
       </div>
     </div>
     <!--SEVENTH DIV-->
@@ -209,7 +189,7 @@
     <!--EIGTH DIV-->
     <div class="container">
       <div class="row gap1">
-        <ul class="col-2 tablet hass">
+        <ul class="col-2 tablet marginleft">
           <div class="box2">
             <img class="img5" src="images/Share Circle.svg">
             <li class="box2txt ">Megnézed a csomagokat és kiválasztod a legmegfelelőbbet</li>
@@ -333,7 +313,7 @@
     <!--FOOTER-->
     <footer class="footerh">
         <div class="container">
-          <div id="flex" class="row pt-5">
+          <div id="flex4" class="row pt-5">
             <img id="A" src="images/logo2.svg" alt="" class="">
               <ul id="B" class="list-inline">
                 <li class="list-inline-item"><a href="#" target="_blank" title="Facebook"><img class="w-auto" src="images/facebook.svg" alt=""></i></a></li>
